# bob-bar

./: .gitignore  AGENT_PROMPT_REFINEMENTS.md  BIBLIOGRAPHY_AND_CONFIG_UPDATES.md  Cargo.toml  DOCUMENTATION_AUDIT.md  FINAL_IMPROVEMENTS_SUMMARY.md  IMPLEMENTATION_SUMMARY.md  PROMPT_DEPTH_ENHANCEMENTS.md  QUICKSTART_RESEARCH_MODE.md  README.md  RESEARCH_MODE.md  RESEARCH_MODE_QUICK_REFERENCE.md  RESEARCH_TOOLS_UPDATE.md  agents.example.json  agents.json  api_keys.example.toml  config.example.toml  config.toml  install.ps1  install.sh  tools.example.json  tools.json
.github/workflows/: release.yml
docs/: README.md  architecture.md  memory-system.md  research-pipeline.md
packaging/macos/: Info.plist  make_app_bundle.sh
src/: config.rs  dynamic_context.rs  embeddings.rs  history.rs  main.rs  ollama.rs  progress.rs  research.rs  screenshot.rs  shared_memory.rs  tools.rs
