[package]
name = "bob-bar"
version = "0.1.0"
edition = "2021"

[dependencies]
iced = { version = "0.13", features = ["tokio", "advanced"] }
tokio = { version = "1.35", features = ["full"] }
tokio-util = "0.7"
reqwest = { version = "0.11", default-features = false, features = ["json", "native-tls-vendored", "stream"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
toml = "0.8"
pulldown-cmark = "0.9"
anyhow = "1.0"
base64 = "0.22"
image = "0.25"
futures-util = "0.3"
notify-rust = "4.11"
rusqlite = { version = "0.31", features = ["bundled"] }
sqlite-vec = "0.1"
unicode-width = "0.1"
once_cell = "1.19"
regex = "1.10"
pdf-extract = "0.7"
